--- a/strings.html
+++ b/strings.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>title</title>
+    <title>Checker</title>
 </head>
 <body>
 <style>
@@ -12,7 +12,6 @@
 text-align: center;
     }
 </style>
-
 <button id="go" onclick="check()">Palindrome?</button>
 <p id="Answer"> </p>
 </body>
