--- a/strings.html
+++ b/strings.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Matt Fay -->
 <html>
 <script src="code.js"></script>
 
@@ -12,7 +13,16 @@
 text-align: center;
     }
 </style>
-<button id="go" onclick="check()">Palindrome?</button>
+<button id="go" onclick="check()">Palindrome?</button><br>
+<label for="first">FirstName:</label>
+<input id=first type="text" value="John"><br>
+<label for="last">LastName:</label>
+<input id=last type="text" value="Doe"><br>
+<label for="zip">zip:</label>
+<input id=zip><br>
+<button id="login" onclick="login()">Win</button>
 <p id="Answer"> </p>
+<img id="ham" src="Hamster01.jpg" alt="" style="visibility: hidden";>
 </body>
 </html>
+
